<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:background="@android:color/white"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<com.ss.bottomnavigation.BottomNavigation
		android:layout_gravity="bottom"
		android:id="@+id/bn_home"
		android:background="@color/blue_grey_700"
		android:layout_width="fill_parent"
		android:layout_height="56.0dip"
		android:layout_alignParentBottom="true"
		app:itemIconTint="@drawable/color_state_white_2"
		app:itemTextColor="@drawable/color_state_white_2">
		<com.ss.bottomnavigation.TabItem
			android:id="@+id/tab_home"
			android:layout_width="0.0dip"
			android:layout_height="fill_parent"
			android:layout_weight="1.0"
			app:tab_icon="@drawable/home"
			app:tab_text="@string/all_home"
			app:tab_text_color="@color/grey_20"
			app:unselected_tab_text_color="@color/gray300" />
		<com.ss.bottomnavigation.TabItem
			android:id="@+id/tab_category"
			android:layout_width="0.0dip"
			android:layout_height="fill_parent"
			android:layout_weight="1.0"
			app:tab_icon="@drawable/buffer"
			app:tab_text="@string/all_categories"
			app:tab_text_color="@color/grey_20"
			app:unselected_tab_icon="@drawable/selected_buffer"
			app:unselected_tab_text_color="@color/gray300" />
		<com.ss.bottomnavigation.TabItem
			android:id="@+id/tab_bookmarks"
			android:layout_width="0.0dip"
			android:layout_height="fill_parent"
			android:layout_weight="1.0"
			app:tab_icon="@drawable/library"
			app:tab_text="@string/all_bookmarks"
			app:tab_text_color="@color/grey_20"
			app:unselected_tab_icon="@drawable/selected_library" app:unselected_tab_text_color="@color/gray300" />
		<com.ss.bottomnavigation.TabItem
			android:id="@+id/tab_videos"
			android:layout_width="0.0dip"
			android:layout_height="fill_parent"
			android:layout_weight="1.0"
			app:tab_icon="@drawable/youtube_play"
			app:tab_text="@string/all_videos"
			app:tab_text_color="@color/grey_20"
			app:unselected_tab_icon="@drawable/selected_youtube_play" app:unselected_tab_text_color="@color/gray300" />
	</com.ss.bottomnavigation.BottomNavigation>
	<FrameLayout
		android:name="com.example.randomnews.home.HomeFragment"
		android:id="@+id/home_fragment"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_above="@id/bn_home" />
	<FrameLayout
		android:id="@+id/frame_main_progressBar"
		android:background="@android:color/white"
		android:visibility="gone"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_above="@id/bn_home">
		<com.airbnb.lottie.LottieAnimationView
			android:layout_gravity="center"
			android:id="@id/spin_kit"
			android:layout_width="200.0dip"
			android:layout_height="200.0dip"
			app:lottie_autoPlay="true"
			app:lottie_loop="true"
			app:lottie_rawRes="@raw/loader" />
	</FrameLayout>
</RelativeLayout>
