<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.Setting">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:paddingEnd="8dp"
            android:paddingStart="8dp">

            <ImageView
                android:id="@+id/iv_setting_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_arrow_back_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/iv_setting_back"
                android:text="@string/setting_viewTitle"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>




    </com.google.android.material.appbar.AppBarLayout>
    <RadioGroup
        android:id="@+id/radio_group_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_margin="8dp"
            android:text="@string/setting_selectLocaleMessage"/>
        <RadioButton
            android:id="@+id/rb_setting_en"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="English"
            />
        <RadioButton
            android:id="@+id/rb_setting_fa"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="فارسی"
            />
        <TextView
            android:id="@+id/tv_setting_restartMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:alpha="0"
            android:text="@string/setting_restartMessage"
            android:textColor="@color/colorAccent"
            />


    </RadioGroup>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_setting"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:lottie_rawRes="@raw/sync_icon"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
       />


</androidx.coordinatorlayout.widget.CoordinatorLayout>